[gd_scene load_steps=15 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/scripts/tracked_pos.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/fonts/Square.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.027451, 0.298039, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0470588, 0.756863, 0.00784314, 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.380392, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.0980392, 0.32549, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0196078, 0, 0.745098, 1 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 7 )

[node name="Q_recog_tracked" type="Position3D"]
script = ExtResource( 3 )

[node name="OQ_VisibilityToggle" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.675199, 0, 0, 0, 0.647651, 0.190897, 0, -0.190897, 0.647652, 0, 0.176689, -0.0791197 )

[node name="OQ_UI2DCanvas" parent="OQ_VisibilityToggle" instance=ExtResource( 4 )]
transform = Transform( 0.27197, 0, -7.45058e-09, 0, 0.27197, 0, 7.45058e-09, 0, 0.27197, 0, 0, 0 )
transparent = true

[node name="Control" type="ReferenceRect" parent="OQ_VisibilityToggle/OQ_UI2DCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_right = 0.375
anchor_bottom = 0.32
margin_right = -3.05176e-05
margin_bottom = -3.05176e-05
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "ADD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_left = 0.625
anchor_right = 1.003
anchor_bottom = 0.32
margin_left = 6.10352e-05
margin_right = -0.0720215
margin_bottom = -4.57764e-05
custom_styles/hover = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="OQ_VisibilityToggle/OQ_UI2DCanvas/Control"]
anchor_left = 0.375
anchor_right = 0.625
anchor_bottom = 0.32
margin_left = -3.05176e-05
margin_bottom = -1.52588e-05
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "CANCEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OQ_UILabel" parent="OQ_VisibilityToggle" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 5.96046e-08, 0, 1, 2.98023e-08, 0, -5.96046e-08, 1, -0.173725, -0.0274144, -7.45058e-09 )
text = ""
valign = 3
background_color = Color( 0, 0, 0, 0 )
transparent = true

[node name="OQ_UILabel2" parent="OQ_VisibilityToggle" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 1.19209e-07, 0, 1, 2.98023e-08, 0, -5.96046e-08, 1, 0.178948, -0.0274144, -7.45058e-09 )
text = ""
align = 2
valign = 3
background_color = Color( 0, 0, 0, 0 )
transparent = true
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="OQ_VisibilityToggle/OQ_UI2DCanvas/Control/cancel" to="." method="_on_cancel_pressed"]
